--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,3 +1,18 @@
-version = "3.7.1"
-runner.dialect = "scala213"
+version = "3.8.3"
+runner.dialect = "scala3"
 trailingCommas = "multiple"
+maxColumn = 110
+
+rewrite.rules = [
+  Imports,
+  PreferCurlyFors,
+  SortModifiers,
+]
+rewrite.imports.expand = true
+rewrite.imports.sort = original
+rewrite.imports.groups = [
+ ["scala\\..*"],
+ ["java\\..*"],
+]
+rewrite.scala3.convertToNewSyntax = true
+rewrite.scala3.removeOptionalBraces = yes
