--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,8 @@ jobs:
 
       - name: Install scala-cli
         uses: VirtusLab/scala-cli-setup@v1
+        with:
+          jvm: temurin:17
 
       - name: Run CI
         run: make check
