--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,8 @@ jobs:
 
       - name: Install scala-cli
         uses: VirtusLab/scala-cli-setup@v1
+        with:
+          jvm: temurin:17
 
       - name: Assemble uber jar
         run: make sendxmpp-dist-${{ github.ref_name }}.jar
